--- a/scss/asc.css
+++ b/scss/asc.css
@@ -281,14 +281,13 @@ html {
       margin-left: auto;
       margin-right: auto;
       text-align: center;
-      background: url(/wp-content/uploads/sites/192/2015/04/ascent-logo-full.png) no-repeat center center;
+      background: url(/wp-content/uploads/sites/192/2015/01/ascent-logo.png) no-repeat center center;
       background-size: contain;
-      top: calc(-66% * 1.5); }
-  html body.home .videoBG {
-    width: 100% !important; }
+      top: calc(50% - 175px); }
   html body.home .videobg .videoBG_wrapper {
-    width: 100% !important;
-    padding-top: 66%; }
+    width: 100% !important; }
+  html body.home .videobg .videoBG {
+    width: 100% !important; }
   html body.home div.page {
     width: 100%;
     float: left; }
