--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -350,8 +350,8 @@ html {
 				 	margin-left:auto;
 				 	margin-right:auto;
 				 	text-align: center;
-				 	/*background:url(/wp-content/uploads/sites/4/2015/04/ascent-logo-full.png) no-repeat center center;*/
-				 	background:url(/wp-content/uploads/sites/192/2015/04/ascent-logo-full.png) no-repeat center center;
+				 	background:url(/wp-content/uploads/sites/4/2015/04/ascent-logo-full.png) no-repeat center center;
+				 	/*background:url(/wp-content/uploads/sites/192/2015/04/ascent-logo-full.png) no-repeat center center;*/
 				 	background-size:contain;
 				 	top:calc(50% - 175px);
 				 }
@@ -585,6 +585,13 @@ html {
 				margin-top:20px !important;
 			}
 		} /* body */
+		body.home {
+			.banner-container {
+				.logo-hp-container {
+					top:28% !important;
+				}
+			}
+		}
 	} /* html */
 } /* media */
 @media screen and (max-width : 791px) {
@@ -655,6 +662,11 @@ html {
 			#binder.fluid {
 				main {
 					margin-top:4em !important;
+				}
+			}
+			.banner-container {
+				.logo-hp-container {
+					top:24%;
 				}
 			}
 		}
