--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Ascent - Aviation Sustainability Center
 Theme URI: https://web.wsu.edu/
 Author: WSU University Communications
 Author URI: https://web.wsu.edu/
-Description: A child theme of the WSU Web Communications Spine template, used for Sandboxing.
+Description: A child theme of the WSU Web Communications Spine template.
 Template: spine
 Version: 0.8.8
 License: GPLv2 or later
