Adds mobile styling to sub-menu sub-menu
Adds mobile styling to sub-menu sub-menu

--- a/scss/asc.css
+++ b/scss/asc.css
@@ -529,12 +529,29 @@ html {
             display: block; }
             html body nav.main-menu ul li ul li {
               margin-left: 4px;
-              background-color: #EEEEEC;
+              background-color: #CBCBCB;
               text-align: center;
               border: none; }
               html body nav.main-menu ul li ul li a {
                 color: #4e4c4b;
                 border-bottom: 1px solid #fff; }
+              html body nav.main-menu ul li ul li ul.sub-menu {
+                top: 0;
+                width: 100%;
+                margin: 0;
+                padding: 0;
+                display: block;
+                left: 0;
+                border-left: none;
+                position: relative; }
+                html body nav.main-menu ul li ul li ul.sub-menu li {
+                  margin-left: 0;
+                  background-color: #EEEEEC;
+                  text-align: center;
+                  border-left: none; }
+                  html body nav.main-menu ul li ul li ul.sub-menu li a {
+                    color: #4e4c4b;
+                    border-bottom: 1px solid #fff; }
     html body .mobilenav {
       width: 100% !important;
       border-top: none;
