--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -350,15 +350,14 @@ html {
 			position:relative;
 				.logo-hp-container {
 					position:absolute;
-				 	height:60%;
+				 	height:50%;
 				 	width:100%;
 				 	margin-left:auto;
 				 	margin-right:auto;
 				 	text-align: center;
-				 	background:url(/wp-content/uploads/sites/4/2015/04/ascent-logo-full.png) no-repeat center center;
-				 	/*background:url(/wp-content/uploads/sites/192/2015/04/ascent-logo-full.png) no-repeat center center;*/
-				 	background-size:contain;
-				 	top:calc(50% - 175px);
+				 	background:url(../images/ascent-logo-full.png) no-repeat center center;
+				  	background-size:contain;
+				 	top:calc(50% - 110px);
 				 }
 		}
 		.videobg {
